fixed flickering issue on UI when clicking on poll choices

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ a:active {
   border: 0px;
   margin-bottom: 15px;
   border-radius: 5px;
-  box-shadow: 2px 2px 5px black;
+  box-shadow: 2px 2px 1px black;
 }
 
 .article-content {
